Tue May  6 20:37:31 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/Service_Participant.h:

          Removed servant_to_reference, reference_to_servant, and deactivate_object.

        * DevGuideExamples/DCPS/Messenger/publisher.cpp:
        * DevGuideExamples/DCPS/Messenger/stack_subscriber.cpp:
        * DevGuideExamples/DCPS/Messenger/subscriber.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/publisher.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/subscriber.cpp:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DomainParticipantFactoryImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/Service_Participant.cpp:
        * dds/DCPS/SubscriberImpl.cpp:
        * dds/DCPS/TopicImpl.cpp:
        * dds/InfoRepo/DCPSInfoRepo.cpp:
        * dds/InfoRepo/DCPS_IR_Domain.cpp:
        * examples/DCPS/DistributedContent/AbstractionLayer.cpp:
        * examples/DCPS/IntroductionToOpenDDS/publisher.cpp:
        * examples/DCPS/IntroductionToOpenDDS/subscriber.cpp:
        * examples/DCPS/Messenger_IOGR_Imr/publisher.cpp:
        * examples/DCPS/Messenger_IOGR_Imr/subscriber.cpp:
        * examples/DCPS/Messenger_Imr/publisher.cpp:
        * examples/DCPS/Messenger_Imr/subscriber.cpp:
        * performance-tests/DCPS/InfoRepo_population/publisher.cpp:
        * performance-tests/DCPS/InfoRepo_population/subscriber.cpp:
        * performance-tests/DCPS/McastListenerTest/DataReaderListener.cpp:
        * performance-tests/DCPS/McastListenerTest/Writer.cpp:
        * performance-tests/DCPS/McastListenerTest/publisher.cpp:
        * performance-tests/DCPS/McastListenerTest/subscriber.cpp:
        * performance-tests/DCPS/SimpleE2ETest/Reader.cpp:
        * performance-tests/DCPS/SimpleE2ETest/Writer.cpp:
        * performance-tests/DCPS/SimpleE2ETest/publisher.cpp:
        * performance-tests/DCPS/SimpleE2ETest/subscriber.cpp: